--- a/app/src/main/res/layout/activity_package_detail_screen.xml
+++ b/app/src/main/res/layout/activity_package_detail_screen.xml
@@ -33,6 +33,7 @@
                 android:id="@+id/tv_note"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
                 android:text="@string/note"
                 android:textColor="@color/main_heading_text_color"
                 android:textSize="@dimen/screen_title_text_size" />
