--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -5,38 +5,59 @@
 
     android:background="@drawable/background">
 
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/btn_send"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="@dimen/screen_margin_left"
-        android:layout_marginRight="@dimen/screen_margin_right">
+
+        android:layout_alignParentTop="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-
             <ImageView
+                android:id="@+id/img_top"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/banner_contact_us"/>
+                android:layout_height="200dp"
 
-            <com.caretom.customViews.CustomTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-
-                android:text="@string/contact_us_heading"
-                android:textColor="@color/main_heading_text_color"
-                android:textSize="@dimen/screen_title_text_size" />
+                android:scaleType="fitXY"
+                android:src="@drawable/banner_contact_us" />
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/screen_margin_left"
+                android:layout_marginRight="@dimen/screen_margin_right"
+                android:layout_marginTop="10dp"
+                android:gravity="center_vertical">
+
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/heart_icon" />
+
+
+                <com.caretom.customViews.CustomTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/contact_us_heading"
+                    android:textColor="@color/cms_page_heading_color"
+                    android:textSize="@dimen/screen_title_text_size" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/screen_margin_left"
+                android:layout_marginRight="@dimen/screen_margin_right"
                 android:layout_marginTop="25dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
@@ -64,13 +85,16 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-
+                android:layout_marginLeft="@dimen/screen_margin_left"
+                android:layout_marginRight="@dimen/screen_margin_right"
                 android:background="@color/lineColor" />
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/screen_margin_left"
+                android:layout_marginRight="@dimen/screen_margin_right"
                 android:layout_marginTop="15dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
@@ -98,13 +122,16 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-
+                android:layout_marginLeft="@dimen/screen_margin_left"
+                android:layout_marginRight="@dimen/screen_margin_right"
                 android:background="@color/lineColor" />
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/screen_margin_left"
+                android:layout_marginRight="@dimen/screen_margin_right"
                 android:layout_marginTop="10dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
@@ -132,12 +159,15 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-
+                android:layout_marginLeft="@dimen/screen_margin_left"
+                android:layout_marginRight="@dimen/screen_margin_right"
                 android:background="@color/lineColor" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/screen_margin_left"
+                android:layout_marginRight="@dimen/screen_margin_right"
                 android:layout_marginTop="15dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
@@ -167,7 +197,8 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-
+                android:layout_marginLeft="@dimen/screen_margin_left"
+                android:layout_marginRight="@dimen/screen_margin_right"
                 android:background="@color/lineColor" />
 
         </LinearLayout>
@@ -179,8 +210,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/main_heading_text_color"
+        android:background="@color/toolbarColor"
         android:text="@string/send"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="@dimen/screen_margin_left"
+        android:layout_marginRight="@dimen/screen_margin_right"
         android:textColor="@color/whiteColor" />
 
 </RelativeLayout>
