--- a/app/src/main/res/layout/fragment_free_packages.xml
+++ b/app/src/main/res/layout/fragment_free_packages.xml
@@ -2,16 +2,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="@dimen/screen_margin_left"
-    android:layout_marginRight="@dimen/screen_margin_right"
+
     android:background="@drawable/background"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/img"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_alignParentTop="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/banner_packages" />
+
 
     <ListView
+        android:layout_marginLeft="@dimen/screen_margin_left"
+        android:layout_marginRight="@dimen/screen_margin_right"
         android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/img"
         android:layout_gravity="center_vertical"
         android:divider="@android:color/transparent"
         android:dividerHeight="10dp"
