--- a/app/src/main/res/layout/row_package_listing.xml
+++ b/app/src/main/res/layout/row_package_listing.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="45dp"
-    android:background="@drawable/package_drawabale"
+    android:layout_height="65dp"
+    android:layout_marginTop="3dp"
+    android:layout_marginBottom="3dp"
+    android:background="@drawable/button_icon"
+    android:gravity="center"
     android:orientation="horizontal">
 
 
     <LinearLayout
         android:id="@+id/ll_package"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_weight="1"
         android:orientation="vertical">
 
 
@@ -22,34 +20,17 @@
             android:id="@+id/tv_package_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/main_heading_text_color"
-            android:textSize="@dimen/screen_title_text_size" />
+            android:textColor="@color/packege_text_color"
+            android:textSize="@dimen/screen_package_text_size" />
 
         <com.caretom.customViews.CustomTextView
             android:id="@+id/tv_package_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/main_heading_text_color"
-            android:textSize="@dimen/screen_title_text_size" />
+            android:textColor="@color/packege_text_color"
+            android:textSize="@dimen/screen_package_text_size" />
 
     </LinearLayout>
-
-
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/forward_drawable">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="2dp"
-            android:src="@drawable/img_forward" />
-    </FrameLayout>
 
 
 </LinearLayout>
