--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,11 +6,15 @@
     <color name="whiteColor">#ffffff</color>
     <color name="menu_screen_background">#f7f7f7</color>
     <color name="menu_screen_item_hovered">#186c9b</color>
-    <color name="toolbarColor">#46b6a6</color>
+    <color name="toolbarColor">#1c1d21</color>
     <color name="forget_password_background">#edefed</color>
     <color name="main_heading_text_color">#46b6a6</color>
     <color name="transparent">#00000000</color>
     <color name="lineColor">#9e9e9e</color>
+    <color name="cms_page_heading_color">#1e1f21</color>
+    <color name="cms_pages_button_color">#222c35</color>
+    <color name="packege_text_color">#80222c34</color>
+
 
 
 </resources>
