--- a/app/src/main/res/layout/activity_main_menu_screen.xml
+++ b/app/src/main/res/layout/activity_main_menu_screen.xml
@@ -29,7 +29,7 @@
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@drawable/menu_bg"
+        android:background="@color/toolbarColor"
         android:choiceMode="singleChoice"
         android:divider="@color/whiteColor"
         android:dividerHeight="1dp"
