--- a/app/src/main/res/layout/widget_header.xml
+++ b/app/src/main/res/layout/widget_header.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-   >
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/ll_back"
@@ -18,7 +17,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-
             android:src="@drawable/back_arrow" />
 
         <ImageView
@@ -28,12 +26,13 @@
             android:layout_toRightOf="@id/img_back"
             android:src="@drawable/logo_38" />
 
-        <TextView
+        <com.caretom.customViews.CustomTextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/img_logo"
             android:paddingLeft="10dp"
+            android:textColor="@color/whiteColor"
             android:textSize="18sp" />
     </LinearLayout>
 
